--- a/contents/stylesheets/extra.css
+++ b/contents/stylesheets/extra.css
@@ -12,17 +12,59 @@ SPDX-License-Identifier: CC-BY-SA-4.0
 }
 .md-typeset .admonition.rationale,
 .md-typeset details.rationale {
-  border-color: rgb(100, 80, 110);
+  border-color: rgb(100, 90, 110);
 }
 .md-typeset .rationale > .admonition-title,
 .md-typeset .rationale > summary {
-  background-color: rgba(100, 80, 110, 0.1);
+  background-color: rgba(100, 90, 110, 0.1);
 }
 .md-typeset .rationale > .admonition-title::before,
 .md-typeset .rationale > summary::before {
-  background-color: rgb(100, 80, 110);
+  background-color: rgb(100, 90, 110);
   -webkit-mask-image: var(--md-admonition-icon--rationale);
   mask-image: var(--md-admonition-icon--rationale);
+}
+
+/*
+ * New admonition type: 'background'
+ */
+:root {
+  --md-admonition-icon--background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M560 160A80 80 0 1 0 560 0a80 80 0 1 0 0 160zM55.9 512l325.2 0 75 0 122.8 0c33.8 0 61.1-27.4 61.1-61.1c0-11.2-3.1-22.2-8.9-31.8l-132-216.3C495 196.1 487.8 192 480 192s-15 4.1-19.1 10.7l-48.2 79L286.8 81c-6.6-10.6-18.3-17-30.8-17s-24.1 6.4-30.8 17L8.6 426.4C3 435.3 0 445.6 0 456.1C0 487 25 512 55.9 512z"/></svg>');
+}
+.md-typeset .admonition.background,
+.md-typeset details.background {
+  border-color: rgb(0, 40, 180);
+}
+.md-typeset .background > .admonition-title,
+.md-typeset .background > summary {
+  background-color: rgba(0, 40, 180, 0.1);
+}
+.md-typeset .background > .admonition-title::before,
+.md-typeset .background > summary::before {
+  background-color: rgb(0, 40, 180);
+  -webkit-mask-image: var(--md-admonition-icon--background);
+  mask-image: var(--md-admonition-icon--background);
+}
+
+/*
+ * New admonition type: 'related'
+ */
+:root {
+  --md-admonition-icon--related: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M440-400v-360h80v360h-80Zm0 200v-80h80v80h-80Z"/></svg>');
+}
+.md-typeset .admonition.related,
+.md-typeset details.related {
+  border-color: rgb(0, 40, 180);
+}
+.md-typeset .related > .admonition-title,
+.md-typeset .related > summary {
+  background-color: rgba(0, 40, 180, 0.1);
+}
+.md-typeset .related > .admonition-title::before,
+.md-typeset .related > summary::before {
+  background-color: rgb(0, 40, 180);
+  -webkit-mask-image: var(--md-admonition-icon--related);
+  mask-image: var(--md-admonition-icon--related);
 }
 
 /*
@@ -33,15 +75,15 @@ SPDX-License-Identifier: CC-BY-SA-4.0
 }
 .md-typeset .admonition.thanks,
 .md-typeset details.thanks {
-  border-color: rgb(0, 150, 150);
+  border-color: rgb(0, 160, 120);
 }
 .md-typeset .thanks > .admonition-title,
 .md-typeset .thanks > summary {
-  background-color: rgba(0, 150, 150, 0.1);
+  background-color: rgba(0, 160, 120, 0.1);
 }
 .md-typeset .thanks > .admonition-title::before,
 .md-typeset .thanks > summary::before {
-  background-color: rgb(0, 150, 150);
+  background-color: rgb(0, 160, 120);
   -webkit-mask-image: var(--md-admonition-icon--thanks);
   mask-image: var(--md-admonition-icon--thanks);
 }
@@ -54,38 +96,17 @@ SPDX-License-Identifier: CC-BY-SA-4.0
 }
 .md-typeset .admonition.advanced,
 .md-typeset details.advanced {
-  border-color: rgb(130, 100, 10);
+  border-color: rgb(110, 90, 70);
 }
 .md-typeset .advanced > .admonition-title,
 .md-typeset .advanced > summary {
-  background-color: rgba(130, 100, 10, 0.1);
+  background-color: rgba(110, 90, 70, 0.1);
 }
 .md-typeset .advanced > .admonition-title::before,
 .md-typeset .advanced > summary::before {
-  background-color: rgb(130, 100, 10);
+  background-color: rgb(110, 90, 70);
   -webkit-mask-image: var(--md-admonition-icon--advanced);
   mask-image: var(--md-admonition-icon--advanced);
-}
-
-/*
- * New admonition type: 'related'
- */
-:root {
-  --md-admonition-icon--related: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M440-400v-360h80v360h-80Zm0 200v-80h80v80h-80Z"/></svg>');
-}
-.md-typeset .admonition.related,
-.md-typeset details.related {
-  border-color: rgb(0, 60, 180);
-}
-.md-typeset .related > .admonition-title,
-.md-typeset .related > summary {
-  background-color: rgba(0, 60, 180, 0.1);
-}
-.md-typeset .related > .admonition-title::before,
-.md-typeset .related > summary::before {
-  background-color: rgb(0, 60, 180);
-  -webkit-mask-image: var(--md-admonition-icon--related);
-  mask-image: var(--md-admonition-icon--related);
 }
 
 /*
@@ -94,8 +115,8 @@ SPDX-License-Identifier: CC-BY-SA-4.0
 .index {
   font-size: x-large;
   font-weight: 300;
-  margin-top: 9ex;
-  margin-bottom: 3ex;
+  margin-top: 10ex;
+  margin-bottom: 4ex;
 }
 
 /*
