--- a/contents/stylesheets/extra.css
+++ b/contents/stylesheets/extra.css
@@ -1,5 +1,5 @@
 /*
-SPDX-FileCopyrightText: Copyright 2017-2024, Douglas Myers-Turnbull
+SPDX-FileCopyrightText: Copyright 2017-2025, Douglas Myers-Turnbull
 SPDX-PackageHomePage: https://dmyersturnbull.github.io
 SPDX-License-Identifier: CC-BY-SA-4.0
 */
@@ -68,45 +68,24 @@ SPDX-License-Identifier: CC-BY-SA-4.0
 }
 
 /*
- * New admonition type: 'thanks'
+ * New admonition type: 'related'
  */
 :root {
-  --md-admonition-icon--thanks: url('data:image/svg+xml;charset=utf-8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M190.5 68.8L225.3 128l-1.3 0-72 0c-22.1 0-40-17.9-40-40s17.9-40 40-40l2.2 0c14.9 0 28.8 7.9 36.3 20.8zM64 88c0 14.4 3.5 28 9.6 40L32 128c-17.7 0-32 14.3-32 32l0 64c0 17.7 14.3 32 32 32l448 0c17.7 0 32-14.3 32-32l0-64c0-17.7-14.3-32-32-32l-41.6 0c6.1-12 9.6-25.6 9.6-40c0-48.6-39.4-88-88-88l-2.2 0c-31.9 0-61.5 16.9-77.7 44.4L256 85.5l-24.1-41C215.7 16.9 186.1 0 154.2 0L152 0C103.4 0 64 39.4 64 88zm336 0c0 22.1-17.9 40-40 40l-72 0-1.3 0 34.8-59.2C329.1 55.9 342.9 48 357.8 48l2.2 0c22.1 0 40 17.9 40 40zM32 288l0 176c0 26.5 21.5 48 48 48l144 0 0-224L32 288zM288 512l144 0c26.5 0 48-21.5 48-48l0-176-192 0 0 224z"/></svg>');
+  --md-admonition-icon--prerequisites: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 208c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-176c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 272c0 1.5 0 3.1 .1 4.6L67.6 283c-16-15.2-41.3-14.6-56.6 1.4s-14.6 41.3 1.4 56.6L124.8 448c43.1 41.1 100.4 64 160 64l19.2 0c97.2 0 176-78.8 176-176l0-208c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 112c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-176c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 176c0 8.8-7.2 16-16 16s-16-7.2-16-16l0-208z"/></svg>');
 }
-.md-typeset .admonition.thanks,
-.md-typeset details.thanks {
-  border-color: rgb(0, 160, 120);
+.md-typeset .admonition.prerequisites,
+.md-typeset details.prerequisites {
+  border-color: rgb(130, 100, 40);
 }
-.md-typeset .thanks > .admonition-title,
-.md-typeset .thanks > summary {
-  background-color: rgba(0, 160, 120, 0.1);
+.md-typeset .prerequisites > .admonition-title,
+.md-typeset .prerequisites > summary {
+  background-color: rgba(130, 100, 0.1);
 }
-.md-typeset .thanks > .admonition-title::before,
-.md-typeset .thanks > summary::before {
-  background-color: rgb(0, 160, 120);
-  -webkit-mask-image: var(--md-admonition-icon--thanks);
-  mask-image: var(--md-admonition-icon--thanks);
-}
-
-/*
- * New admonition type: 'advanced'
- */
-:root {
-  --md-admonition-icon--advanced: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M440-400v-360h80v360h-80Zm0 200v-80h80v80h-80Z"/></svg>');
-}
-.md-typeset .admonition.advanced,
-.md-typeset details.advanced {
-  border-color: rgb(110, 90, 70);
-}
-.md-typeset .advanced > .admonition-title,
-.md-typeset .advanced > summary {
-  background-color: rgba(110, 90, 70, 0.1);
-}
-.md-typeset .advanced > .admonition-title::before,
-.md-typeset .advanced > summary::before {
-  background-color: rgb(110, 90, 70);
-  -webkit-mask-image: var(--md-admonition-icon--advanced);
-  mask-image: var(--md-admonition-icon--advanced);
+.md-typeset .prerequisites > .admonition-title::before,
+.md-typeset .prerequisites > summary::before {
+  background-color: rgb(130, 100, 40);
+  -webkit-mask-image: var(--md-admonition-icon--prerequisites);
+  mask-image: var(--md-admonition-icon--prerequisites);
 }
 
 /*
